--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -1,12 +1,12 @@
 
 body {
-  background-color: #c4dce1; /* change background color */
+  background-color: #000000;
   text-align: center;
-  color: #000;  /* change font color */
+  color: #228B22; 
   line-height: 36px;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: 'Old English Text MT', Helvetica, sans-serif;
 }
 
 body,html {
@@ -14,23 +14,22 @@ body,html {
 
 }
 a, a:active, a:visited {
-  color: #0066CC;
+  color: #000000;
 }
 
 h1, h2, h3, h4 {
   font-weight: 300;
-  letter-spacing: 2px; /* change */
+  letter-spacing: 2px; 
 }
 
 h1 {
-  font-size: 36px; /* change */
+  font-size: 36px;
   line-height: 36px;
   margin: 1.6875rem 0;
 }
 
 #container {
-  background-image: url("../img/cement.jpg"); /* change background */
-  min-height: 100%;
+  background-color: #000000;
   max-width: 960px;
   margin: 0 auto;
 }
@@ -51,4 +50,3 @@ p {
     text-align: center;
 
 }
-
