--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,9 @@
   box-sizing: border-box;
 }
 body {
-  color: #333333;   
+  color: #FFFFFF;   
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  background-color: #c4dce1;                      /*change your Bkg color*/
+  background-color: #000000;                     
 }
 
 a, a:active, a:visited {
@@ -25,15 +25,15 @@ footer {
 }
 
 footer p {
-  font-size: 18px;                 /*font size in footer*/
+  font-size: 18px;                
   padding: 0;
   margin: 0;
 }
 
 header {
-  background: #C8C1B7;
+  background: #000000;
   border-bottom: 1px solid #999999;
-  background-image: url("../img/gallerybanner.jpg"); /*change your banner image*/
+  background-image: url("../img/matrix.gif"); /*banner image creds: Angel May*/
   height: 60px;
   position: relative;
   width: 100%;
@@ -78,7 +78,7 @@ header nav a, header nav a:visited {
   display: block;
   line-height: 60px;
   text-decoration: none;
-  color: #000000;                         /*changes banner text color*/
+  color: #FFFFFF;                         
   transition: color 200ms ease-in-out;
 }
 
